DuPont DevSB/src/objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>Accuracy_of_the_service_provided__c</fullName>
        <description>How would you assess the accuracy of the service provided?</description>
        <inlineHelpText>How would you assess the accuracy of the service provided?</inlineHelpText>
        <label>Accuracy of the service provided</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Name__c</fullName>
        <label>Application Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_skills_of_the_agent__c</fullName>
        <description>How would you assess the communication skills of the agent?</description>
        <inlineHelpText>How would you assess the communication skills of the agent?</inlineHelpText>
        <label>Communication skills of the agent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communications_of_the_status_of_survey__c</fullName>
        <description>How would you describe the communications concerning the status of the service you received?</description>
        <inlineHelpText>How would you describe the communications concerning the status of the service you received?</inlineHelpText>
        <label>Communications of the status of survey</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_ID_del__c</fullName>
        <formula>Issue__r.Issue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issue ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_ID_for_this_Survey__c</fullName>
        <formula>Issue__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issue ID for this Survey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Resolved__c</fullName>
        <description>Do you consider your issue resolved ?</description>
        <inlineHelpText>Do you consider your issue resolved ?</inlineHelpText>
        <label>Issue Resolved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Issue</label>
        <referenceTo>Issue__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_User__c</fullName>
        <label>Key User</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professionalism_of_the_analyst__c</fullName>
        <description>How would you assess the professionalism, friendliness and courtesy of the analyst who assisted you?</description>
        <inlineHelpText>How would you assess the professionalism, friendliness and courtesy of the analyst who assisted you?</inlineHelpText>
        <label>Professionalism of the analyst</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q1__c</fullName>
        <label>Met the Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Very Dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q2__c</fullName>
        <label>Satisfaction of Status updation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Very Dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q3__c</fullName>
        <label>Satisfaction of overall services</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Very Dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Access_Request_ID__c</fullName>
        <formula>SFDC_Access_Request__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Access Request ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Access_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFDC Access Request</label>
        <referenceTo>SFDC_Access_Request__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Satisfaction_of_overall_services__c</fullName>
        <description>How would you assess the overall quality of the service provided?</description>
        <inlineHelpText>How would you assess the overall quality of the service provided?</inlineHelpText>
        <label>Satisfaction of overall services</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCS_INFY_COO__c</fullName>
        <formula>Issue__r.Owner:User.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TCS/INFY COO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeline_of_the_service_provided__c</fullName>
        <description>How would you assess the timelines in which your service was provided?</description>
        <inlineHelpText>How would you assess the timelines in which your service was provided?</inlineHelpText>
        <label>Timeline of the service provided</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalNoOfHoursETLTeam__c</fullName>
        <label>TotalNoOfHoursETLTeam</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalNoOfHoursIODTeam__c</fullName>
        <label>TotalNoOfHoursIODTeam</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalNoOfHoursPioneerTeam__c</fullName>
        <label>TotalNoOfHoursPioneerTeam</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalNoOfHoursSAPTeam__c</fullName>
        <label>TotalNoOfHoursSAPTeam</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application_Name__c</columns>
        <columns>Issue__c</columns>
        <columns>SFDC_Access_Request__c</columns>
        <columns>Key_User__c</columns>
        <columns>Owner__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Accuracy_of_the_service_provided__c</columns>
        <columns>Communication_skills_of_the_agent__c</columns>
        <columns>Communications_of_the_status_of_survey__c</columns>
        <columns>Professionalism_of_the_analyst__c</columns>
        <columns>Satisfaction_of_overall_services__c</columns>
        <columns>Q3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>